samples/_failures_safe/1761519311_ce8586_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a9786d8.c: In function ‘main’:
./samples/SAFE/__tmp_4a9786d8.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
